@@ -26,6 +26,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -69,7 +70,7 @@ class ProviderInstallIntegrationTest {
         AccountAdmin admin = new AccountAdmin(accountStore, ai.clock());
 
         String stagedDir = System.getProperty("exampleserver.providersDir");
-        ProviderSource fakeSource = new FakeProviderSource(Path.of(stagedDir));
+        ProviderSource fakeSource = new FakeProviderSource(Paths.get(stagedDir));
         MessagesAdmin messages = new MessagesAdmin(store, json, holder, ai.logger());
         RoutingAdmin routing = new RoutingAdmin(store, json, holder, ai.logger());
 
