@@ -23,6 +23,7 @@ import javax.sql.DataSource;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -31,6 +32,7 @@ import java.util.UUID;
 import java.util.regex.Pattern;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -73,7 +75,7 @@ class AiJavaTest {
         seedFallbackModelMap(store, new GsonJsonCodec());
 
         AiJava app = AiJava.builder().storage(store).build();
-        AiJava.WiredRouter router = app.router(fallbackProfile(), fakeResolver(), () -> List.of("rl", "ok"));
+        AiJava.WiredRouter router = app.router(fallbackProfile(), fakeResolver(), () -> Arrays.asList("rl", "ok"));
 
         HttpResponse resp = router.route(post("/v1/messages", "{}"));
 
@@ -82,7 +84,7 @@ class AiJavaTest {
         // Storage.memory() takes no path at all, so nothing should have touched this scratch
         // directory - the config lives purely in the ConcurrentHashMap backing InMemoryStore.
         try (java.util.stream.Stream<Path> files = Files.list(tmp)) {
-            assertTrue(files.findAny().isEmpty(), "memory-backed AiJava must not create any file");
+            assertFalse(files.findAny().isPresent(), "memory-backed AiJava must not create any file");
         }
     }
 
@@ -93,7 +95,7 @@ class AiJavaTest {
         seedFallbackModelMap(store, new GsonJsonCodec());
 
         AiJava app = AiJava.builder().storage(store).build();
-        AiJava.WiredRouter router = app.router(fallbackProfile(), fakeResolver(), () -> List.of("rl", "ok"));
+        AiJava.WiredRouter router = app.router(fallbackProfile(), fakeResolver(), () -> Arrays.asList("rl", "ok"));
 
         HttpResponse resp = router.route(post("/v1/messages", "{}"));
 
@@ -179,7 +181,7 @@ class AiJavaTest {
         opusFallback.put("provider", "ok");
         opusFallback.put("model", "m-ok");
         Map<String, Object> doc = new HashMap<>();
-        doc.put("modelMap", Collections.singletonMap("opus", List.of(opus, opusFallback)));
+        doc.put("modelMap", Collections.singletonMap("opus", Arrays.asList(opus, opusFallback)));
         store.put(CONFIG_FILE, json.stringify(doc));
     }
 
